syntax = "proto3";

package sec03;
option java_package = "com.nexusforge.grpcplayground.models.sec03";
option java_multiple_files = true;

message Car{
  string make = 1;
  string model = 2;
  int32 year = 3;
}

message Dealer{
  map<int32, Car> inventory = 1;

}