syntax = "proto3";

package sec04.common;
option java_package = "com.nexusforge.grpcplayground.models.common";
option java_multiple_files = true;

message Car{
  string make = 1;
  string model = 2;
  int32 year = 3;
  BodyStyle body_style=4;
}
enum BodyStyle{
  SEDAN = 0;
  COUPE = 1;
  SUV = 2;
}