syntax = "proto3";

package sec04;
option java_package = "com.nexusforge.grpcplayground.models.sec04";
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";


message Sample{
  google.protobuf.Int32Value age = 1;
  google.protobuf.Timestamp login_time =2;
}